2007-09-06  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-window.c
	* src/vinagre-window-private.h:
	  - Show tooltips on statusbar

2007-09-06  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-tab.[hc]
	* src/vinagre-commands.[hc]
	* src/vinagre-window.c
	* src/vinagre-ui.h
	* data/vinagre-ui.xml:
	  - Added "Take Screenshot" feature

2007-08-31  Jonh Wendell  <jwendell@gnome.org>

	* lots of files:
	  - Added command line options parsing 
	  - Removed my own socket code, let gtk-vnc do the dirty job 

2007-08-31  Jonh Wendell  <jwendell@gnome.org>

	* MAINTAINERS: Updated to the new format
	* src/vinagre-notebook.c: Handles disconnect signal

==================== 0.2 ====================

2007-08-20  Jonh Wendell  <jwendell@gnome.org>

	* lots of files: version 0.2
