@@ -1,5 +1,10 @@
 2007-09-06  Jonh Wendell  <jwendell@gnome.org>
 
+	* src/vinagre-tab.c
+	  - Show pointer grab/ungrab messages on statusbar
+
+2007-09-06  Jonh Wendell  <jwendell@gnome.org>
+
 	* src/vinagre-window.c
 	* src/vinagre-window-private.h:
 	  - Show tooltips on statusbar
